<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:hint="@string/distancia"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:text="@string/total_em_quilometros"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:hint="@string/preco"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:text="@string/preco_por_litro"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:hint="@string/autonomia"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:text="@string/kms_por_litro"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <TextView
        android:id="@+id/text_total_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gasto_total"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        android:textAllCaps="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor_total"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="38dp"
        android:textAllCaps="true"
        android:textColor="@color/purple_700"/>

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/calcular"
        android:textSize="20sp"
        android:padding="16dp"
        android:textAllCaps="true"
        android:backgroundTint="@color/teal_200"/>

</LinearLayout>